<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.WeatherInfoFragment">

    <RelativeLayout
        android:id="@+id/rlCurrentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRefreshTime"
            style="@style/styleSubHeading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dummy_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            style="@style/styleSubHeading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRefreshTime"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_dummy_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTemp"
            style="@style/styleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/text_sample_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentTempCelsius"
            style="@style/styleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocation"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_toRightOf="@+id/tvCurrentTemp"
            android:text="@string/text_celsius"
            android:textSize="@dimen/_20ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentMaxMinTemp"
            style="@style/styleDataType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrentTemp"
            android:layout_centerHorizontal="true"
            android:text="@string/text_sample_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentWeatherDescription"
            style="@style/styleBodyCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrentMaxMinTemp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/text_sample_value" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForecast"
        style="@style/styleSubHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlCurrentData"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/text_5_day_forecast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvForecast"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />
</RelativeLayout>