<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDay"
        style="@style/styleDataType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dummy_date"
        android:textColor="@color/color_sub_heading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentTemp"
        style="@style/styleBodyCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="@dimen/_14sdp"
        android:text="@string/text_sample_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentTempCelsius"
        style="@style/styleBodyCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/text_celsius" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentMaxMinTemp"
        style="@style/styleDataBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentTemp"
        android:layout_alignParentEnd="true"
        android:text="@string/text_sample_value"
        android:textColor="@color/purple_200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentWeatherDescription"
        style="@style/styleBodyCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentMaxMinTemp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/text_sample_value"
        android:textColor="@color/teal_700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/tvCurrentWeatherDescription"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white" />
</RelativeLayout>